# language-detection

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
notebook/: notebook.ipynb
src/: main.py
src/classifier/: __init__.py  classifier.py  distances.py  profiler.py
src/evaluation/: __init__.py  utils.py
